--- a/package.json
+++ b/package.json
@@ -15,19 +15,13 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:migrate": "prisma migrate dev"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.22.0",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-switch": "^1.0.3",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
-    "date-fns-tz": "^2.0.0",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
@@ -46,7 +40,6 @@
     "postcss": "^8.4.32",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
-    "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
