--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
-    "db:migrate": "prisma migrate dev"
+    "db:migrate": "prisma migrate dev",
+    "generate:icons": "node scripts/generate-icons.js"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
@@ -40,6 +41,7 @@
     "eslint-config-next": "14.0.4",
     "postcss": "^8.4.32",
     "prisma": "^5.7.1",
+    "sharp": "^0.33.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.3.3"
   }
