Update .gitignore to simplify PWA file exclusions

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,9 @@ next-env.d.ts
 /prisma/migrations
 
 # PWA
-**/public/sw.js
-**/public/sw.js.map
-**/public/workbox-*.js
-**/public/workbox-*.js.map
-**/public/worker-*.js
-**/public/worker-*.js.map
+public/sw.js
+public/sw.js.map
+public/workbox-*.js
+public/workbox-*.js.map
+public/worker-*.js
+public/worker-*.js.map
