Add webpack configuration to handle sharp dependency in server builds

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ public/workbox-*.js
 public/workbox-*.js.map
 public/worker-*.js
 public/worker-*.js.map
+
+# Scripts (no necesarios en producción)
+scripts/
