--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
-    "next": "14.0.4",
+    "next": "^14.2.35",
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
@@ -38,7 +38,7 @@
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.35",
     "postcss": "^8.4.32",
     "prisma": "^5.7.1",
     "sharp": "^0.33.0",
