--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
     "date-fns": "^2.30.0",
+    "firebase": "^12.8.0",
+    "firebase-admin": "^13.6.0",
     "next": "^14.2.35",
     "next-auth": "^4.24.5",
     "next-pwa": "^5.6.0",
